# symantica

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: __main__.py  registry.py  validate.py
core/compiler/: load.py  registry.py  sql.py  validate.py
core/runtime/: __init__.py  provider.py
core/schema/: behavior.py  dashboard.py  dataset.py  metric.py  model.py  project.py
examples/underwriting/: project.yaml  registry.json  registry.lock.json
renderers/: dash_app.py  streamlit_app.py
