[project]
name = "symantica"
version = "0.0.1"
description = "A semantic compiler for analytics and BI"
authors = [{ name = "Symantica Contributors" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0", "pyyaml"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
symantica = "cli.__main__:main"